[project]
name = "home-work"
version = "0.1.0"
description = ""
authors = [
    {name = "Filip-Povidernyi",email = "p.poviderniy@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "aiofile (==3.9.0)",
    "aiopath (==0.7.7)",
    "aioshutil (==1.5)",
    "anyio (==4.9.0)",
    "caio (==0.9.24)",
    "idna (==3.10)",
    "sniffio (==1.3.1)",
    "typing-extensions (==4.13.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
